--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "ajv": "^6.4.0",
     "bootstrap": "^4.1.0",
     "jquery": "^3.3.1",
+    "jss": "^9.8.1",
+    "jss-preset-default": "^4.3.0",
     "popper.js": "^1.14.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
