--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.14.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-pdf": "^3.0.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
