--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+**/node_modules
 
 # testing
 /coverage
 
 # production
-/build
-/staticfiles
+**/build
+**/staticfiles
 
 # misc
 .DS_Store
@@ -23,5 +23,5 @@ yarn-error.log*
 
 #django
 *.pyc
-db.sqlite3
+.sqlite3
 secrets.py
